Marker icons. Fixed overflow

--- a/BalloonSimFront/src/styles.css
+++ b/BalloonSimFront/src/styles.css
@@ -9,11 +9,15 @@
 
 html,
 body {
-  overflow: hidden;
   margin: 0px auto;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  overflow-x: hidden;
+}
+
+body.no-overflow{
+  overflow: hidden;
 }
 
 #content {
@@ -34,6 +38,7 @@ header {
   background-color: var(--primary);
   box-shadow: 0px 0px 10px 1px black;
   z-index: 3;
+  top: 0;
 }
 
 header a {
@@ -74,6 +79,7 @@ nav {
   top: 0px;
   left: 0px;
   background-color: var(--darker);
+  overflow: hidden;
 }
 
 canvas {
@@ -105,6 +111,7 @@ canvas {
   box-shadow: 0px 0px 10px 1px black;
   width: 80%;
   margin: 10% auto;
+  z-index: 1;
 }
 
 .content-card h1, h2{
@@ -121,6 +128,7 @@ canvas {
 .map-container {
   width: 100%;
   height: 600px;
+  z-index: 1;
 }
 
 .map-frame {
